# envwrap

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: test.yml
envwrap/: __init__.py  cli.py
tests/: test_envwrap.py
