[build-system]
requires = ["setuptools>=42", "setuptools-scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests"]

[project.urls]
repository = "https://github.com/tqdm/envwrap"
changelog = "https://github.com/tqdm/envwrap/releases"

[project]
name = "envwrap"
dynamic = ["version"]
maintainers = [{name = "tqdm developers", email = "devs@tqdm.ml"}]
description = "Simple defaults from config files and environment variables"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["env", "environment", "config"]
license = "MPL-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX",
    "Operating System :: Unix"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=6", "pytest-cov"]

[tool.flake8]
max_line_length = 99
exclude = [".git", "__pycache__", "build", "dist", ".eggs"]

[tool.yapf]
spaces_before_comment = [15, 20]
arithmetic_precedence_indication = true
allow_split_before_dict_value = false
coalesce_brackets = true
column_limit = 99
each_dict_entry_on_separate_line = false
space_between_ending_comma_and_closing_bracket = false
split_before_named_assigns = false
split_before_closing_bracket = false
blank_line_before_nested_class_or_def = false

[tool.isort]
line_length = 99
multi_line_output = 4
known_first_party = ["envwrap", "tests"]

[tool.pytest.ini_options]
minversion = "6.0"
log_level = "INFO"
testpaths = ["tests"]
addopts = "-v --tb=short -rxs -W=error --durations=0 --durations-min=0.1"

[tool.coverage.run]
branch = true
[tool.coverage.report]
show_missing = true
