[build-system]
requires = ["setuptools>=42", "setuptools-scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
exclude = ["tests"]

[project.urls]
repository = "https://github.com/tqdm/envwrap"
changelog = "https://github.com/tqdm/envwrap/releases"

[project]
name = "envwrap"
dynamic = ["version"]
maintainers = [{name = "tqdm developers", email = "devs@tqdm.ml"}]
description = "Override parameter defaults via environment variables & config files"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["config", "environment", "env", "defaults", "partial", "appdir", "appdirs", "platformdirs"]
license = {text = "MPL-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX",
    "Operating System :: Unix"]
dependencies = [
    "platformdirs",
    "toml; python_version < '3.11'",
    "PyYAML",
]

[project.optional-dependencies]
dev = ["pytest>=6", "pytest-cov"]

[project.scripts]
envwrap = "envwrap.cli:main"

[tool.flake8]
max_line_length = 99
extend_ignore = ["E261"]
exclude = [".git", "__pycache__", "build", "dist", ".eggs"]

[tool.yapf]
spaces_before_comment = [15, 20]
arithmetic_precedence_indication = true
allow_split_before_dict_value = false
coalesce_brackets = true
column_limit = 99
each_dict_entry_on_separate_line = false
space_between_ending_comma_and_closing_bracket = false
split_before_named_assigns = false
split_before_closing_bracket = false
blank_line_before_nested_class_or_def = false

[tool.isort]
line_length = 99
multi_line_output = 4
known_first_party = ["envwrap", "tests"]

[tool.pytest.ini_options]
minversion = "6.0"
log_level = "INFO"
testpaths = ["tests"]
addopts = "-v --tb=short -rxs -W=error --durations=0 --durations-min=0.1"

[tool.coverage.run]
branch = true
[tool.coverage.report]
show_missing = true
